manifests/portfolio-website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio-website
  template:
    metadata:
      labels:
        app: portfolio-website
    spec:
      containers:
      - name: portfolio-website
        image: tylerpitcher/portfolio-website:1.0.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "128Mi"
          limits:
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: portfolio-website-service
spec:
  selector:
    app: portfolio-website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-website-ingress-https
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`tylerpitcher.com`, `www.tylerpitcher.com`)
    kind: Rule
    services:
    - name: portfolio-website-service
      port: 80
  tls:
    secretName: tls-secret
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: portfolio-website-ingress-http
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`tylerpitcher.com`, `www.tylerpitcher.com`)
    kind: Rule
    services:
    - name: portfolio-website-service
      port: 80
    middlewares:
    - name: https-redirect
